# geoetl

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  codecov.yml
.circleci/: config-ci.yml  config-release.yml  config.yml
.github/: dependabot.yml
bench/: README.md  data_download.sh  run_benchmark.sh  stop_benchmark.sh
crates/formats/datafusion-arrow/: Cargo.toml
crates/formats/datafusion-csv/: Cargo.toml
crates/formats/datafusion-csv/src/: factory.rs  file_format.rs  lib.rs  sink.rs
crates/formats/datafusion-csv/tests/: test_writer_integration.rs
crates/formats/datafusion-geojson/: Cargo.toml
crates/formats/datafusion-geojson/src/: decoder.rs  factory.rs  file_format.rs  lib.rs  parser.rs  physical_exec.rs  sink.rs  writer.rs
crates/formats/datafusion-geojson/tests/: test_writer_integration.rs
crates/formats/datafusion-geojsonseq/: Cargo.toml
crates/formats/datafusion-geopackage/: Cargo.toml
crates/formats/datafusion-geoparquet/: Cargo.toml
crates/formats/datafusion-geoparquet/src/: factory.rs  file_format.rs  file_source.rs  lib.rs  physical_exec.rs  sink.rs  writer.rs
crates/formats/datafusion-osm/: Cargo.toml
crates/formats/datafusion-shapefile/: Cargo.toml
crates/formats/datafusion-shared/src/: lib.rs
crates/geoetl-cli/: Cargo.toml
crates/geoetl-cli/src/: main.rs
crates/geoetl-cli/tests/: e2e_convert.rs  e2e_geoparquet.rs
crates/geoetl-cli/tests/e2e_data/flatgeobuf/: natural-earth_cities.fgb
crates/geoetl-cli/tests/e2e_data/geoparquet/: natural-earth_cities.parquet
crates/geoetl-core/: Cargo.toml
crates/geoetl-core-common/src/: factory.rs  io.rs
crates/geoetl-core/src/: drivers.rs  error.rs  init.rs  operations.rs
crates/geoetl-core/tests/: integration_convert.rs
docs/: DATAFUSION_GEOSPATIAL_FORMAT_INTEGRATION_GUIDE.md  DOCUMENTATION_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  QUICKREF.md  README_ADR.md  README_blog_release_post.md
docs/adr/: 001-streaming-geojson-architecture.md  002-streaming-csv-architecture.md  003-geojson-performance-optimization.md  004-streaming-geoparquet-architecture.md
docs/geoetl-doc-site/: DOCUMENTATION_REVIEW.md  docusaurus.config.ts  package.json
docs/geoetl-doc-site/blog/: 2025-11-03-performance-benchmarking-infrastructure.md  2025-11-04-geoparquet-support-v0-3-0.md  tags.yml
docs/geoetl-doc-site/blog/release/: 2025-10-31-announcing-geoetl-v0.1.0.md  2025-11-01-error-handling-v0-1-2.md  2025-11-03-streaming-csv-performance-v0-2-0.md  2025-11-04-geoparquet-support-v0-3-0.md  2025-11-06-shell-completions-v0-3-1.md  2025-11-08-sql-query-support-v0-4-0.md
docs/geoetl-doc-site/docs/: faq.md  glossary.md  intro.md
docs/geoetl-doc-site/docs/community/: _category_.json  changelog.md  contributing.md  roadmap.md
docs/geoetl-doc-site/docs/drivers/: _category_.json  supported-drivers.md
docs/geoetl-doc-site/docs/drivers/vector/: _category_.json  csv.md  geojson.md  geoparquet.md
docs/geoetl-doc-site/docs/getting-started/: _category_.json  first-conversion.md  installation.md
docs/geoetl-doc-site/docs/how-to/: _category_.json  troubleshooting.md
docs/geoetl-doc-site/docs/programs/: _category_.json  completions.md  convert.md  drivers.md  index.md  info.md
docs/geoetl-doc-site/docs/reference/: benchmarks.md  driver-matrix.md  supported-drivers.md
docs/geoetl-doc-site/docs/tutorial-basics/: first-conversion.md  installation.md  troubleshooting.md  understanding-drivers.md  working-with-csv.md  working-with-geojson.md  working-with-geoparquet.md
