# geoetl/Cargo.toml
[workspace]
members = [
  "crates/formats/datafusion-arrow",
  "crates/formats/datafusion-csv",
  "crates/formats/datafusion-flatgeobuf",
  "crates/formats/datafusion-geojson",
  "crates/formats/datafusion-geojsonseq",
  "crates/formats/datafusion-geopackage",
  "crates/formats/datafusion-geoparquet",
  "crates/formats/datafusion-osm",
  "crates/formats/datafusion-shapefile",
  "crates/formats/datafusion-shared",
  "crates/geoetl-cli",
  "crates/geoetl-core",
  "crates/geoetl-core-common",
  "crates/geoetl-operations",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
authors = ["Yogesh Dhanapal"]
description = "Modern vector geospatial ETL in Rust. 5-10x faster than GDAL with distributed processing support."
documentation = "https://geoetl.com"
edition = "2024"
license = "MIT"
repository = "https://github.com/geoetl/geoetl"

[workspace.dependencies]
anyhow = "1.0.100"
arrow = "56"
arrow-array = "56"
arrow-cast = "56"
arrow-csv = "56"
arrow-json = "56"
arrow-schema = "56"
async-trait = "0.1"
thiserror = "2.0"
bytes = "1.10"
clap = "4.5.50"
clap_complete = "4.5.50"
csv = "1.4"
csv-async = { version = "1.3", features = ["tokio"] }
datafusion = "50.1.0"
datafusion-common = "50.1.0"
datafusion-execution = "50.1.0"
datafusion-physical-expr = "50.1.0"
datafusion-session = "50.1.0"
datafusion-datasource = "50.1.0"
geoarrow = "0.6.2"
geoarrow-schema = "0.6.2"
geoarrow-cast = "0.6.2"
geoarrow-array = "0.6.2"
geoarrow-flatgeobuf = "0.6.2"
geoparquet = "0.6.2"
geozero = { version = "0.14", features = ["with-wkb", "with-wkt"] }
geo-traits = "0.3.0"
futures = "0.3"
log = "0.4"
object_store = "0.12.4"
tabled = "0.20.0"
tempfile = "3.23"
tokio = "1.48"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2"
url = "2.5"

[workspace.metadata.release]
pre-release-commit-message = "chore(release): bump GeoETL to {{version}}"
tag-name = "v{{version}}"
tag-message = "Release {{version}} of GeoETL"
publish = false
