[package]
name = "datafusion-geoparquet"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-session = { workspace = true }
datafusion-shared = { path = "../datafusion-shared" }
futures = { workspace = true }
geoarrow-array = { workspace = true, features = ["geozero"] }
geoarrow-schema = { workspace = true }
geoparquet = { workspace = true, features = ["async"] }
object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true }
geoetl-core-common = { path = "../../geoetl-core-common" }
anyhow = { workspace = true }
# For Parquet reading/writing
parquet = { version = "57", features = ["async"] }

[dev-dependencies]
geo-traits = { workspace = true }
tempfile = { workspace = true }
